sna: Check that the CPU bo exists before declaring it is busy along upload

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55251
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>